{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 733,
  "lineage": "aac9dd6d-6e5d-5077-c0bc-c17e3c0220ea",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "web_ag",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 10,
                "min_capacity": 0
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/backendAddressPools/hr-dev-vnet-beap-app1",
                "ip_addresses": [],
                "name": "hr-dev-vnet-beap-app1"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Enabled",
                "host_name": "",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/backendHttpSettingsCollection/hr-dev-vnet-be-htst-app1",
                "name": "hr-dev-vnet-be-htst-app1",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 8080,
                "probe_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/probes/hr-dev-vnet-be-probe-app1",
                "probe_name": "hr-dev-vnet-be-probe-app1",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/frontendIPConfigurations/hr-dev-vnet-feip",
                "name": "hr-dev-vnet-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/publicIPAddresses/hr-dev-web-ag-publicip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/frontendPorts/hr-dev-vnet-feport-http",
                "name": "hr-dev-vnet-feport-http",
                "port": 80
              },
              {
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/frontendPorts/hr-dev-vnet-feport-https",
                "name": "hr-dev-vnet-feport-https",
                "port": 443
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-agsubnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [
                  {
                    "custom_error_page_url": "https://staticwebsitepptyls.z19.web.core.windows.net/502.html",
                    "id": "",
                    "status_code": "HttpStatus502"
                  },
                  {
                    "custom_error_page_url": "https://staticwebsitepptyls.z19.web.core.windows.net/403.html",
                    "id": "",
                    "status_code": "HttpStatus403"
                  }
                ],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/frontendIPConfigurations/hr-dev-vnet-feip",
                "frontend_ip_configuration_name": "hr-dev-vnet-feip",
                "frontend_port_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/frontendPorts/hr-dev-vnet-feport-https",
                "frontend_port_name": "hr-dev-vnet-feport-https",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/httpListeners/hr-dev-vnet-lstn-https",
                "name": "hr-dev-vnet-lstn-https",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/sslCertificates/my-cert-1",
                "ssl_certificate_name": "my-cert-1",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/frontendIPConfigurations/hr-dev-vnet-feip",
                "frontend_ip_configuration_name": "hr-dev-vnet-feip",
                "frontend_port_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/frontendPorts/hr-dev-vnet-feport-http",
                "frontend_port_name": "hr-dev-vnet-feport-http",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/httpListeners/hr-dev-vnet-lstn-http",
                "name": "hr-dev-vnet-lstn-http",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag",
            "identity": [],
            "location": "centralus",
            "name": "hr-dev-web-ag",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/probes/hr-dev-vnet-be-probe-app1",
                "interval": 30,
                "match": [
                  {
                    "body": "Username",
                    "status_code": [
                      "200"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "hr-dev-vnet-be-probe-app1",
                "path": "/login",
                "pick_host_name_from_backend_http_settings": false,
                "port": 8080,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [
              {
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/redirectConfigurations/hr-dev-vnet-rdrcfg",
                "include_path": true,
                "include_query_string": true,
                "name": "hr-dev-vnet-rdrcfg",
                "redirect_type": "Permanent",
                "target_listener_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/httpListeners/hr-dev-vnet-lstn-https",
                "target_listener_name": "hr-dev-vnet-lstn-https",
                "target_url": ""
              }
            ],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "",
                "backend_address_pool_name": "",
                "backend_http_settings_id": "",
                "backend_http_settings_name": "",
                "http_listener_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/httpListeners/hr-dev-vnet-lstn-http",
                "http_listener_name": "hr-dev-vnet-lstn-http",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/requestRoutingRules/hr-dev-vnet-rqrt-http",
                "name": "hr-dev-vnet-rqrt-http",
                "priority": 1,
                "redirect_configuration_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/redirectConfigurations/hr-dev-vnet-rdrcfg",
                "redirect_configuration_name": "hr-dev-vnet-rdrcfg",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/backendAddressPools/hr-dev-vnet-beap-app1",
                "backend_address_pool_name": "hr-dev-vnet-beap-app1",
                "backend_http_settings_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/backendHttpSettingsCollection/hr-dev-vnet-be-htst-app1",
                "backend_http_settings_name": "hr-dev-vnet-be-htst-app1",
                "http_listener_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/httpListeners/hr-dev-vnet-lstn-https",
                "http_listener_name": "hr-dev-vnet-lstn-https",
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/requestRoutingRules/hr-dev-vnet-rqrt-https",
                "name": "hr-dev-vnet-rqrt-https",
                "priority": 2,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "hr-dev-rg-pptyls",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "MIIKEQIBAzCCCdcGCSqGSIb3DQEHAaCCCcgEggnEMIIJwDCCBHcGCSqGSIb3DQEHBqCCBGgwggRkAgEAMIIEXQYJKoZIhvcNAQcBMBwGCiqGSIb3DQEMAQYwDgQIzK0b1CG9JT8CAggAgIIEMMuBEpxEt2RWdvH+xxgLIPeMTtTtJQeXAjxZF63fFNMWCBASFUEqdBhG38VtotXrXHFXc6lkItj8MukZcHZWqZs0pgePIxSXxlX1p+N1A2C2dP0OjX+sRde7skie8jApgkr3q06REYuvTwZR/fQT21io/FaMKjr149EXbR+iaA98WM3bXETO5xk2QouPY6gW+9RPgOevEQa7tnGiucTLZXdhCV95+1OWZD+7uaj7j2SJtmXJ6xEUMYNq425CUacPX4383lTB3HhS31ak0WuuZNMH+2FK3Cp+SYJSCu5s/vfRgIlKl6ToIcT+i5kUTQCfVnZ4lFvd5Hg [...]
                "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/applicationGateways/hr-dev-web-ag/sslCertificates/my-cert-1",
                "key_vault_secret_id": "",
                "name": "my-cert-1",
                "password": "kalyan",
                "public_cert_data": "MIID/wYJKoZIhvcNAQcCoIID8DCCA+wCAQExADALBgkqhkiG9w0BBwGgggPUMIID0DCCArgCCQDwv2T24HGlpTANBgkqhkiG9w0BAQsFADCBqTELMAkGA1UEBhMCSU4xEjAQBgNVBAgMCVRlbGFuZ2FuYTESMBAGA1UEBwwJSHlkZXJhYmFkMRYwFAYDVQQKDA1zdGFja3NpbXBsaWZ5MRYwFAYDVQQLDA1DbG91ZCBDb3Vyc2VzMRowGAYDVQQDDBF0ZXJyYWZvcm1ndXJ1LmNvbTEmMCQGCSqGSIb3DQEJARYXc3RhY2tzaW1wbGlmeUBnbWFpbC5jb20wHhcNMjEwODI0MDk0MTM4WhcNNDEwODE5MDk0MTM4WjCBqTELMAkGA1UEBhMCSU4xEjAQBgNVBAgMCVRlbGFuZ2FuYTESMBAGA1UEBwwJSHlkZXJhYmFkMRYwFAYDVQQ [...]
              }
            ],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_public_ip.web_ag_publicip",
            "azurerm_resource_group.rg",
            "azurerm_storage_account.storage_account",
            "azurerm_storage_blob.static_container_blob",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_host_linuxvm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkInterfaces/hr-dev-bastion-host-linuxvm-nic",
            "internal_domain_name_suffix": "dt314sa5uaauxht3n3pewtpseg.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "bastion-host-ip-1",
                "primary": true,
                "private_ip_address": "10.1.100.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-host-publicip",
                "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet"
              }
            ],
            "location": "centralus",
            "name": "hr-dev-bastion-host-linuxvm-nic",
            "private_ip_address": "10.1.100.4",
            "private_ip_addresses": [
              "10.1.100.4"
            ],
            "resource_group_name": "hr-dev-rg-pptyls"
          },
          "dependencies": [
            "azurerm_public_ip.bastion_host_publicip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "ag_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-agsubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-agsubnet-nsg",
            "resource_group_name": "hr-dev-rg-pptyls",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-appsubnet-nsg",
            "resource_group_name": "hr-dev-rg-pptyls",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-bastionsubnet-nsg",
            "resource_group_name": "hr-dev-rg-pptyls",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-dbsubnet-nsg",
            "resource_group_name": "hr-dev-rg-pptyls",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "location": "centralus",
            "name": "hr-dev-vnet-websubnet-nsg",
            "resource_group_name": "hr-dev-rg-pptyls",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_vmss_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-web-vmss-nsg",
            "location": "centralus",
            "name": "hr-dev-web-vmss-nsg",
            "resource_group_name": "hr-dev-rg-pptyls",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Inbound Rule 0",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-0",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 1",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 2",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Inbound Rule 3",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "inbound-rule-3",
                "priority": 103,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ag_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-agsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-agsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ag_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-agsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-agsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ag_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "65200-65535",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-agsubnet-nsg/securityRules/Rule-Port-65200-65535",
            "name": "Rule-Port-65200-65535",
            "network_security_group_name": "hr-dev-vnet-agsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.ag_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "app_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-appsubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "bastion_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-bastionsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg/securityRules/Rule-Port-3389",
            "name": "Rule-Port-3389",
            "network_security_group_name": "hr-dev-vnet-bastionsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "db_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-3306",
            "name": "Rule-Port-3306",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-1433",
            "name": "Rule-Port-1433",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "5432",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg/securityRules/Rule-Port-5432",
            "name": "Rule-Port-5432",
            "network_security_group_name": "hr-dev-vnet-dbsubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web_nsg_rule_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "100",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-80",
            "name": "Rule-Port-80",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "110",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-443",
            "name": "Rule-Port-443",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "120",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-22",
            "name": "Rule-Port-22",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        },
        {
          "index_key": "130",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "8080",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg/securityRules/Rule-Port-8080",
            "name": "Rule-Port-8080",
            "network_security_group_name": "hr-dev-vnet-websubnet-nsg",
            "priority": 130,
            "protocol": "Tcp",
            "resource_group_name": "hr-dev-rg-pptyls",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion_host_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/publicIPAddresses/hr-dev-bastion-host-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.173.104.30",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "hr-dev-bastion-host-publicip",
            "resource_group_name": "hr-dev-rg-pptyls",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "web_ag_publicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/publicIPAddresses/hr-dev-web-ag-publicip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.173.104.162",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "hr-dev-web-ag-publicip",
            "resource_group_name": "hr-dev-rg-pptyls",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "agsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.51.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-agsubnet",
            "name": "hr-dev-vnet-agsubnet",
            "resource_group_name": "hr-dev-rg-pptyls",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "appsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.11.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "name": "hr-dev-vnet-appsubnet",
            "resource_group_name": "hr-dev-rg-pptyls",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastionsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.100.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
            "name": "hr-dev-vnet-bastionsubnet",
            "resource_group_name": "hr-dev-rg-pptyls",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "dbsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "name": "hr-dev-vnet-dbsubnet",
            "resource_group_name": "hr-dev-rg-pptyls",
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "websubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "name": "hr-dev-vnet-websubnet",
            "resource_group_name": "hr-dev-rg-pptyls",
            "service_endpoints": [
              "Microsoft.Sql"
            ],
            "virtual_network_name": "hr-dev-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "ag_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-agsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-agsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-agsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.ag_subnet_nsg",
            "azurerm_network_security_rule.ag_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.agsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-appsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-appsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.app_subnet_nsg",
            "azurerm_network_security_rule.app_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.appsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "bastion_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-bastionsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-bastionsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.bastion_subnet_nsg",
            "azurerm_network_security_rule.bastion_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.bastionsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-dbsubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-dbsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.db_subnet_nsg",
            "azurerm_network_security_rule.db_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.dbsubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web_subnet_nsg_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet",
            "network_security_group_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/networkSecurityGroups/hr-dev-vnet-websubnet-nsg",
            "subnet_id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet/subnets/hr-dev-vnet-websubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.web_nsg_rule_inbound",
            "azurerm_resource_group.rg",
            "azurerm_subnet.websubnet",
            "azurerm_virtual_network.vnet",
            "random_string.myrandom"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "48bffb1c-a01f-4b01-9e7d-6f5e4b4df226",
            "id": "/subscriptions/30ac425c-ea17-4b90-badf-2af77b724338/resourceGroups/hr-dev-rg-pptyls/providers/Microsoft.Network/virtualNetworks/hr-dev-vnet",
            "location": "centralus",
            "name": "hr-dev-vnet",
            "resource_group_name": "hr-dev-rg-pptyls",
            "tags": {
              "environment": "dev",
              "owners": "hr"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "random_string.myrandom"
          ]
        }
      ]
    }
  ]
}